--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "setup": "sh shellCommands/deleteDB.sh && sh shellCommands/initdb.sh"
   },
   "dependencies": {
     "express": "~4.9.0",
